把读配置流程放到gameinstance里面

--- a/UELuban/Config/DefaultEngine.ini
+++ b/UELuban/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameInstanceClass=/Script/UELuban.LubanGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
